# kronos

./: .gitignore  Cargo.toml  flake.nix
kronos/: Cargo.toml
kronos-ipc/: Cargo.toml
kronos-ipc/src/: lib.rs
kronos/src/: app.rs  config.rs  main.rs  persistence.rs  ui.rs
kronos/src/ipc/: mod.rs  server.rs
kronosctl/: Cargo.toml
kronosctl/src/: main.rs
