[workspace]
members = ["kronos", "kronosctl", "kronos-ipc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/kronos"

[workspace.dependencies]
# Async runtime - tokio is standard for async Rust
tokio = { version = "1.40", features = ["full"] }
# Error handling - anyhow for applications, thiserror for libraries
anyhow = "1.0"
thiserror = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Kronos main app
[workspace.dependencies.kronos]
path = "kronos"

# Control CLI
[workspace.dependencies.kronosctl]
path = "kronosctl"

# Shared IPC library
[workspace.dependencies.kronos-ipc]
path = "kronos-ipc"
