[package]
name = "kronos"
version = "0.1.0"
edition = "2021"
authors = ["pabloagn"]
license = "MIT"

[[bin]]
name = "kronos"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = "1.32.0"
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# This dependency was not provided, but it's in your code. Assuming a version.
kronos-ipc = { path = "../kronos-ipc" } # Adjust path if necessary

# TUI specific
ratatui = "0.29.0"
crossterm = "0.27.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and Persistence
directories = "5.0"
toml = "0.8"

# Notifications
notify-rust = "4.11"

# UI Animations
tachyonfx = "0.15.0"

# Sound
# rodio = "0.17"
